--- a/module1/bai5_form_&_table/bai_tap/TaoFormDonGian.html
+++ b/module1/bai5_form_&_table/bai_tap/TaoFormDonGian.html
@@ -2,9 +2,52 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Tạo form cơ bản cùng HTML</title>
 </head>
 <body>
-$END$
+<form>
+    <fieldset>
+        <pre style="color: white;background: red; font-size: x-large;font-family: 'Times New Roman';text-align: center">SỞ THÍCH CỦA BẠN</pre>
+        <pre style="font-size: 18px;color: blue">      Họ và tên  <input name="Your Name" type="text"></pre>
+        <pre style="color: blue;font-size:18px;margin-left:90px"> Email  <input name="Email" type="text"> </pre>
+        <p style="color: blue;font-size: 18px;margin-left:90px "> Sở thích</p>
+        <p style="font-size: 18px;margin-left: 170px;margin-inside: 100px;margin-bottom:10px;color: red">
+            <input name="Hobby" type="checkbox"/> Thể Thao
+            <input name="Hobby" type="checkbox"/> Âm nhạc
+            <input name="Hobby" type="checkbox"/> Đọc sách </p>
+        <p style="font-size: 18px;margin-left: 170px;margin-inside: 100px;margin-bottom:10px;color: red">
+            <input name="Hobby" type="checkbox"/> Lướt web
+            <input name="Hobby" type="checkbox"/> Chơi game
+            <input name="Hobby" type="checkbox"/> Điện ảnh
+        </p>
+        <p style="font-size: 18px;margin-left: 170px;margin-inside: 100px;margin-bottom:10px;color: red"">
+        <input name="Hobby" type="checkbox"> Du lich
+        </p>
+        <p style="margin-left: 170px">
+            <input name="Submit" type="submit" value="Gửi thông tin" style="appearance: inherit">
+            <input name="reset" type="reset" value="Nhập lại" style="appearance: inherit">
+        </p>
+    </fieldset>
+</form>
+<hr>
+<form style="background: yellow">
+    <fieldset>
+        <p style="background: lightblue;color: blue;font-size: 30px">ĐĂNG KÍ HỌC VIÊN</p>
+        <p style="margin-inside: 30px">Họ và tên <input type="text" size="50" name="Name" style="margin-left: 20px"/>
+            <br> Ngày sinh <input type="text" size="30" name="Birth" style="margin-left: 2px"/>
+            <br> GIới tính <input type="radio" name="Sex" value="Nam"/> Nam <input type="radio" name="Sex" value="Nữ"/>
+            Nữ
+            <br> Địa chỉ <input type="text" name="adress" aria-rowcount="4" width="50"/>
+            <br> Lớp
+            <select name="class" id="class">
+                <option value="Lop 1">Lớp 1</option>
+                <option value="Lop 2"> Lớp 2</option>
+
+            </select>
+            <br> Email <input type="text" size="40" name="email"/>
+            <br> Số điện thoại <input type="number" size="40" name="phone"/>
+            <br> <input type="submit" value="Đăng kí"> <input type="reset" value="Nhập lại"/>
+        </p>
+    </fieldset>
+</form>
 </body>
-</html>
