--- a/module1/bai5_form_&_table/bai_tap/TaoFormLaySurveyKhachHang.html
+++ b/module1/bai5_form_&_table/bai_tap/TaoFormLaySurveyKhachHang.html
@@ -2,9 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Survey</title>
 </head>
 <body>
-$END$
+<form>
+    <h1>Market Research Survey</h1>
+    <p>Please take a few moments to complete this satisfaction survey.</p><br>
+    <p>What is your age range?</p>
+    <select name="age">
+        <option value="18-24">18-24</option>
+        <option value="25-34">25-34</option>
+        <option value="35-50">35-50</option>
+        <option value="50+">50+</option>
+    </select>
+    <p>What is your yearly income range?</p><br>
+    <select name="income" >
+        <option value="$1">$0 - $25,000</option>
+        <option value="$2">$25,001 - $50,000</option>
+        <option value="$3">$50,001 - $100,000</option>
+        <option value="$4">$100,000+</option>
+    </select>
+    <p>Gender Identity</p><br>
+
+</form>
 </body>
 </html>
