--- a/module1/bai5_form_&_table/bai_tap/TaoFormDonGian.html
+++ b/module1/bai5_form_&_table/bai_tap/TaoFormDonGian.html
@@ -34,17 +34,17 @@
     <fieldset>
         <p style="background: lightblue;color: blue;font-size: 30px">ĐĂNG KÍ HỌC VIÊN</p>
         <p style="margin-inside: 30px">Họ và tên <input type="text" size="50" name="Name" style="margin-left: 20px"/>
-            <br> Ngày sinh <input type="text" size="30" name="Birth" style="margin-left: 2px"/>
-            <br> GIới tính <input type="radio" name="Sex" value="Nam"/> Nam <input type="radio" name="Sex" value="Nữ"/>
+            <br> Ngày sinh <input type="text" size="30" name="Birth" style="margin-left: 17px"/>
+            <br> GIới tính <input type="radio" name="Sex" value="Nam" style="margin-left: 22px"> Nam <input type="radio" name="Sex" value="Nữ"/>
             Nữ
-            <br> Địa chỉ <input type="text" name="adress" aria-rowcount="4" width="50"/>
+            <br> <label>Địa chỉ</label><textarea type="text" name="adress" aria-rowcount="4" width="50"style="margin-left: 37px"></textarea>
             <br> Lớp
-            <select name="class" id="class">
+            <select name="class"  style="margin-left: 57px">
                 <option value="Lop 1">Lớp 1</option>
                 <option value="Lop 2"> Lớp 2</option>
 
             </select>
-            <br> Email <input type="text" size="40" name="email"/>
+            <br> Email <input type="text" size="40" name="email" style="margin-left: 45px">
             <br> Số điện thoại <input type="number" size="40" name="phone"/>
             <br> <input type="submit" value="Đăng kí"> <input type="reset" value="Nhập lại"/>
         </p>
