--- a/module1/bai5_form_&_table/bai_tap/TaoFormLaySurveyKhachHang.html
+++ b/module1/bai5_form_&_table/bai_tap/TaoFormLaySurveyKhachHang.html
@@ -3,27 +3,103 @@
 <head>
     <meta charset="UTF-8">
     <title>Survey</title>
+    <style>
+        table{
+            border:1px solid black;
+            border-collapse:collapse;
+        }
+        th{
+            border:1px solid black;
+        }
+        td{
+            border:1px solid black;
+           height: 50px;
+        }
+        table tr:nth-child(odd){
+            background-color:#eee;
+        }
+        select{
+            width:420px;
+        }
+    </style>
 </head>
 <body>
 <form>
     <h1>Market Research Survey</h1>
     <p>Please take a few moments to complete this satisfaction survey.</p><br>
-    <p>What is your age range?</p>
+    <p><strong>What is your age range?</strong></p>
     <select name="age">
         <option value="18-24">18-24</option>
         <option value="25-34">25-34</option>
         <option value="35-50">35-50</option>
         <option value="50+">50+</option>
     </select>
-    <p>What is your yearly income range?</p><br>
-    <select name="income" >
+    <p><strong> Is your yearly income range?</strong></p>
+    <select name="income">
         <option value="$1">$0 - $25,000</option>
         <option value="$2">$25,001 - $50,000</option>
         <option value="$3">$50,001 - $100,000</option>
         <option value="$4">$100,000+</option>
     </select>
-    <p>Gender Identity</p><br>
+    <p>Gender Identity</p>
+    <input type="radio" name="gender" value="male">Male<br/>
+    <input type="radio" name="gender" value="female">Female<br/>
+    <input type="radio" name="gender" value="nonbinary">Nonbinary<br/>
+    <input type="radio" name="gender" value="other">Other<br/>
+    <input type="text" name="gender" size="18px" style="margin-left:20px;">
+    <br>
+    <p style="font-size: 14px; margin-left: 20px;">Maximum of <strong>250</strong> charaters</p><br/>
+    <p><strong>Which of the following products have your purchased in the last 2 months. Please check all that
+        apply.</strong></p>
+    <input type="checkbox" name="product" value="Product 1">Product 1<br/>
+    <input type="checkbox" name="product" value="Product 2">Product 2<br/>
+    <input type="checkbox" name="product" value="Product 3">Product 3<br/>
+    <p><strong>How often would you use our new product?</strong></p>
+    <input type="radio" name="t" value="day">Daily<br/>
+    <input type="radio" name="t" value="week">Weekly<br/>
+    <input type="radio" name="t" value="mon">Monthly<br/>
+    <p><strong>What would you pay for the new product?</strong></p>
+    <label>$</label><input type="number" name="pay1" style="margin-left: 10px; width:90px;" ><label
+        style="margin-left: 10px">.</label><input
+        type="number" style="margin-left: 10px;width:30px;" name="pay2">
+    <pre>   Dollars          Cents</pre>
+    <br/>
+    <h4>What features would you like to see in the new product.</h4>
+    <textarea name="text" rows="7" cols="100"></textarea>
+    <p>Please rate your level of agreement with the following statements.</p>
+    <table >
+        <tr>
+            <th></th>
+            <th>Strongly Disagree</th>
+            <th>Disagree</th>
+            <th>Agree</th>
+            <th>Strongly Agree</th>
+        </tr>
+        <tr>
+            <td><strong>Our products are price fairly.</strong></td>
+            <td style="text-align: center;"><input type="radio" name="check1"><br>1</td>
+            <td style="text-align: center;"><input type="radio" name="check1"><br>2</td>
+            <td style="text-align: center;"><input type="radio" name="check1"><br>3</td>
+            <td style="text-align: center;"><input type="radio" name="check1"><br>4</td>
 
+
+        </tr>
+        <tr>
+            <td><strong>Our products are high quality.</strong></td>
+            <td style="text-align: center;"><input type="radio" name="check2"><br>1</td>
+            <td style="text-align: center;"><input type="radio" name="check2"><br>2</td>
+            <td style="text-align: center;"><input type="radio" name="check2"><br>3</td>
+            <td style="text-align: center;"><input type="radio" name="check2"><br>4</td>
+        </tr>
+        <tr>
+            <td><strong>You would recommend our product to a friend or coworker.</strong></td>
+            <td style="text-align: center;"><input type="radio" name="check3"><br>1</td>
+            <td style="text-align: center;"><input type="radio" name="check3"><br>2</td>
+            <td style="text-align: center;"><input type="radio" name="check3"><br>3</td>
+            <td style="text-align: center;"><input type="radio" name="check3"><br>4</td>
+        </tr>
+    </table><br/>
+    <input type="submit" value="Submit" style="font-weight: bold;font-size: medium">
 </form>
 </body>
 </html>
