--- a/module1/bai7_bien_kieu_du_lieu_&_toan_tu/bai_tap/UngDungMayTinh.html
+++ b/module1/bai7_bien_kieu_du_lieu_&_toan_tu/bai_tap/UngDungMayTinh.html
@@ -10,38 +10,38 @@
     <input type="number" id="a">
     <input type="number" id="b">
     <br/>
-    <input type="button" value="Addition(+)" onclick="calc1()">
-    <input type="button" value="Subtraction(-)" onclick="calc2()">
-    <input type="button" value="Multiplication(X)" onclick="calc3()">
-    <input type="button" value="Division(/)" onclick="calc4()">
+    <input type="button" value="Addition(+)" onclick="Addition()">
+    <input type="button" value="Subtraction(-)" onclick="Subtraction()">
+    <input type="button" value="Multiplication(X)" onclick="Multiplication()">
+    <input type="button" value="Division(/)" onclick="Division()">
     <br/><br/>
     <p id="c">Result </p>
 </form>
 </body>
 </html>
 <script>
-    function calc1() {
+    function Addition() {
         let a = parseFloat(document.getElementById("a").value)
         let b = parseFloat(document.getElementById("b").value)
         let c = "Result Addition: " + (a + b)
         document.getElementById("c").innerText = c
     }
 
-    function calc2() {
+    function Subtraction() {
         let a = parseFloat(document.getElementById("a").value)
         let b = parseFloat(document.getElementById("b").value)
         let c = "Result Subtraction: " + (a - b)
         document.getElementById("c").innerText = c
     }
 
-    function calc3() {
+    function Multiplication() {
         let a = parseFloat(document.getElementById("a").value)
         let b = parseFloat(document.getElementById("b").value)
         let c = "Result Multiplication: " + (a * b)
         document.getElementById("c").innerText = c
     }
 
-    function calc4() {
+    function Division() {
         let a = parseFloat(document.getElementById("a").value)
         let b = parseFloat(document.getElementById("b").value)
         let c = "Result Division: " + (a / b)
