--- a/module1/bai9_cau_truc_dieu_kien_2/bai_tap/LuyenTapCauTrucDieuKien01.html
+++ b/module1/bai9_cau_truc_dieu_kien_2/bai_tap/LuyenTapCauTrucDieuKien01.html
@@ -7,18 +7,25 @@
 <body>
 <form>
     <button onclick="bai1()">Bài 1</button>
+    Nhập vào hai số a và b, và kiểm tra xem a có chia hết cho b hay không
     <br/>
     <button onclick="bai2()">Bài 2</button>
+    Nhập tuổi và in ra kết quả nếu tuổi học sinh đó không đủ điều kiện vào học lớp 10.
     <br/>
     <button onclick="bai3()">Bài 3</button>
+    Nhập một số nguyên bất kỳ và in kết quả ra màn hình để nói cho người dùng biết số đó là lớn hay nhỏ hơn 0
     <br/>
     <button onclick="bai4()">Bài 4</button>
+    Nhập 3 số nguyên và tìm giá trị lớn nhất của ba số nguyên đó
     <br/>
     <button onclick="bai5()">Bài 5</button>
+    Xếp hạng học lực của học sinh dựa trên các điểm bài kiểm tra, điểm thi giữa kỳ, điểm thi cuối kỳ
     <br/>
     <button onclick="bai6()">Bài 6</button>
+    Tính hoa hồng nhận được tuỳ theo mức doanh số bán hàng
     <br/>
     <button onclick="bai7()">Bài 7</button>
+    Tính cước điện thoại cho một hộ gia đình với các thông số đã cho
     <br/>
 
 </form>
@@ -126,6 +133,6 @@
         } else {
             a = a * 600 + 25000;
         }
-        alert("Cước phí điện thoại là: " + a +" VND");
+        alert("Cước phí điện thoại là: " + a + " VND");
     }
 </script>
