--- a/module1/bai10_cau_truc_lap_1/thuc_hanh/SuDungCauTrucVongLapFor.html
+++ b/module1/bai10_cau_truc_lap_1/thuc_hanh/SuDungCauTrucVongLapFor.html
@@ -14,7 +14,14 @@
         text += "The number is " + i + "<br>";
     }
     document.getElementById("demo").innerHTML = text;
-
+    /////////////////
+    let num = prompt("Enter your number: ");
+    let total = 0;
+    for (let i = 1; i <= num; i += 1) {
+        total = total + i;
+    }
+    alert(total);
+    ////////////////
 </script>
 </body>
 </html>
