--- a/module1/bai11_cau_truc_lap_2/bai_tap/LuyenTapVongLap1.html
+++ b/module1/bai11_cau_truc_lap_2/bai_tap/LuyenTapVongLap1.html
@@ -7,7 +7,8 @@
 <body>
 <form>
     <button onclick="bai1()">Bài 1</button>
-    Sử dụng vòng lặp để đếm từ 1 đến 100. Khi số là 99, hiển thị hộp thoại thông báo là đã hoàn thành.
+    Sử dụng vòng lặp để đếm từ 1 đến 100. Khi số là 99, hiển thị hộp thoại thông báo là đã hoàn thành.<br/>
+    Console.log
     <br/>
     <button onclick="bai2()">Bài 2</button>
     Sử dụng hàm prompt() để lấy thông tin nhiệt độ hiện tại được nhập bởi người truy cập. Nếu nhiệt độ nhập vào trên
