--- a/module1/bai15_ham_2/bai_tap/luyen_tap_su_dung_ham_01/Bai5TenCacChomSao.html
+++ b/module1/bai15_ham_2/bai_tap/luyen_tap_su_dung_ham_01/Bai5TenCacChomSao.html
@@ -8,10 +8,10 @@
 <script>
     let star = ["Polaris", "Aldebaran", " Deneb", "Vega", " Altair", "Dubhe", "Regulus"];
     let constellation = ["Ursa Minor", "Tarurus", "Cygnus", "Lyra", "Aquila", "Ursa Major", "Leo"];
-    let result = show();
+    let result = findStar();
     alert(result);
 
-    function show() {
+    function findStar() {
         let name = prompt("Nhập tên ngôi sao :");
         let result = "Ngôi sao này không tồn tại";
         for (let i = 0; i < 7; i++) {
