--- a/module1/bai15_ham_2/bai_tap/luyen_tap_su_dung_ham_01/Bai5TenCacChomSao.html
+++ b/module1/bai15_ham_2/bai_tap/luyen_tap_su_dung_ham_01/Bai5TenCacChomSao.html
@@ -8,11 +8,11 @@
 <script>
     let star = ["Polaris", "Aldebaran", "Deneb", "Vega", "Altair", "Dubhe", "Regulus"];
     let constellation = ["Ursa Minor", "Tarurus", "Cygnus", "Lyra", "Aquila", "Ursa Major", "Leo"];
-    let result = findStar();
+    let name = prompt("Nhập tên ngôi sao :");
+    let result = findStar(name);
     alert(result);
 
-    function findStar() {
-        let name = prompt("Nhập tên ngôi sao :");
+    function findStar(name) {
         let result = "Ngôi sao này không tồn tại";
         for (let i = 0; i < 7; i++) {
             if (name === star[i]) {
